<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                   tools:showIn="@layout/activity_main"
                                                   tools:context=".SkunkWorkListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skunk_works_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="363dp" />
</androidx.constraintlayout.widget.ConstraintLayout>